@@ -1,5 +1,6 @@
 [3.0.7]
         * [ADDED]: #2875 Fixed font misconfiguration after Qt update.
+        * [ADDED]: #2879 Fixed View updating after table modification, when view uses SELECT with table alias same as table name.
 
 [3.0.6]
         * [ADDED]: #2740 Option to configure whether bottom dock area (with status field) should extend to left border, or should it leave space for database list.
